Hide text overflow in search results and add a title to see the full text on hover. Fixes #16.

--- a/src/LiveDocs.Shared/wwwroot/css/shared.scss
+++ b/src/LiveDocs.Shared/wwwroot/css/shared.scss
@@ -31,6 +31,8 @@ li.dropdown:hover > div.dropdown-menu {
 
 .dropdown-item {
     padding-left: 10px;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
 }
 
 .dropdown-item:focus, .dropdown-item:hover {
